--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -68,8 +68,6 @@
     <fragment
         android:id="@+id/aboutFragment"
         android:name="com.example.android.navigation.AboutFragment"
-        android:label="fragment_about"
+        android:label="@string/title_about_trivia"
         tools:layout="@layout/fragment_about" />
-    <!-- TODO (01) Add the AboutFragment to the Navigation Graph
-         Go to the navigation editor and click the add button.  Add fragment_about. -->
 </navigation>
